finished general ui for room (except the highlighted balls)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <mat-toolbar >
   <mat-toolbar-row class="row">
-  <button mat-button class="text-color h4" [routerLink]="''" style="margin-left: -15px">EtherBingo</button>
+  <button mat-button class="h4" [routerLink]="''" style="margin-left: -15px">EtherBingo</button>
   <button mat-mini-fab color="primary" [routerLink]="'sing-out'"><mat-icon>account_circle</mat-icon></button>
   </mat-toolbar-row>
   <mat-toolbar-row class="row">
     <button mat-raised-button color="primary" class="h5" [routerLink]="'deposit'">Deposit</button>
-    <span class="text-color">0,000002342 <i class='fab fa-ethereum' style='font-size:24px'></i></span>
+    <span>0,000002342 <i class='fab fa-ethereum' style='font-size:24px'></i></span>
   </mat-toolbar-row>
 </mat-toolbar>
 <div class="content-folder">
