--- a/src/app/components/room/room.component.html
+++ b/src/app/components/room/room.component.html
@@ -8,20 +8,37 @@
 </ng-container>
 
 <ng-container *ngIf="isPlayTime">
-  <p class="row h4 text-center">calledBalls: {{calledBalls$ | async}}</p>
-  <mat-card>
-    <mat-card-header class="text-center">
-      Win Board
-    </mat-card-header>
-  </mat-card>
-  <div class="row" style="max-width: 80vw; overflow: hidden">
+<p class="row h4 text-center">calledBalls</p>
+<swiper [direction]="'horizontal'" [slidesPerView]="9">
+  <ng-template swiperSlide *ngFor="let balls of calledBalls">
+    <div class="number">
+      {{balls}}
+    </div>
+  </ng-template>
+</swiper>
 
-    <mat-card *ngFor="let board of boards">
+<mat-card>
+  <mat-card-title class="text-center">
+    Win Board
+  </mat-card-title>
+  <mat-card-content class="board">
+    <div *ngFor="let row of ticket" class="row">
+      <div *ngFor="let number of row" class="number">
+        {{number}}
+      </div>
+    </div>
+  </mat-card-content>
+</mat-card>
+
+<swiper [direction]="'horizontal'" [slidesPerView]="5">
+  <ng-template swiperSlide *ngFor="let board of boards">
+    <mat-card>
       <mat-card-header>
         {{board.id}}
       </mat-card-header>
     </mat-card>
-  </div>
+  </ng-template>
+</swiper>
 </ng-container>
 
 <ng-container *ngIf="isWonTime">
