--- a/src/app/components/room/room.component.scss
+++ b/src/app/components/room/room.component.scss
@@ -16,3 +16,7 @@
   background-color: rgba(123, 31, 162, 0.75);
   font-size: 1rem;
 }
+
+.number.warn {
+  background-color: rgba(244, 67, 54, 0.75);
+}
