--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   </mat-toolbar-row>
   <mat-toolbar-row class="row">
     <button mat-raised-button color="primary" class="h5" [routerLink]="'deposit'">Deposit</button>
-    <span>0,000002342 <i class='fab fa-ethereum' style='font-size:24px'></i></span>
+    <span>{{currentBingoBalance}} <i class='fab fa-ethereum' style='font-size:24px'></i></span>
   </mat-toolbar-row>
 </mat-toolbar>
 <div class="content-folder">
