--- a/src/app/components/room/room.component.html
+++ b/src/app/components/room/room.component.html
@@ -1,4 +1,5 @@
 <ng-container *ngIf="isBuyTime">
+  <p class="row h4 text-center">Current ticket price: {{ticketPrice}} <i class='fab fa-ethereum' style='font-size:24px'></i></p>
   <button mat-raised-button color="primary" class="h6" (click)="startGame()">Buy tickets and play game</button>
 </ng-container>
 
