--- a/src/app/components/deposit/deposit.component.html
+++ b/src/app/components/deposit/deposit.component.html
@@ -1,2 +1,3 @@
 <p>deposit works!</p>
 <button mat-raised-button color="primary" class="h6" (click)="makeDeposit()">Make a deposit</button>
+<button mat-raised-button color="primary" class="h6" (click)="withdrawMoney()">Withdraw money</button>
