--- a/src/app/components/room/room.component.html
+++ b/src/app/components/room/room.component.html
@@ -1,45 +1,112 @@
 <ng-container *ngIf="isBuyTime">
-  <p class="row h4 text-center">Current ticket price: {{ticketPrice}} <i class='fab fa-ethereum' style='font-size:24px'></i></p>
-  <button mat-raised-button color="primary" class="h6" (click)="startGame()">Buy tickets and play game</button>
+  <!--  <p class="row h4 text-center">Current ticket price: {{ticketPrice}} <i class='fab fa-ethereum' style='font-size:24px'></i></p>-->
+  <p *ngIf="!(balanceIsUpdated$ | async); else balanceUpdated"> Wait, until balance would be updated</p>
+
+  <ng-template #balanceUpdated>
+    <button mat-raised-button color="primary" class="h6" (click)="startGame()"
+            *ngIf="balanceValueIsEnough(balance$ | async, ticketPrice$ | async); else GoToWallet">Play game
+    </button>
+    <ng-template #GoToWallet>
+      <p>Not enough money, please, make a deposit</p>
+      <button mat-raised-button color="primary" class="h5" [routerLink]="'wallet'">Go to Wallet</button>
+    </ng-template>
+  </ng-template>
 </ng-container>
 
 <ng-container *ngIf="isCountDownTime">
   <p class="row h4 text-center">Time to start: {{timeToStart}}</p>
-  <p class="row h4">Yo have: {{boughTickets}} bought tickets</p>
+  <!--  <p class="row h4">Yo have: {{boughTickets}} bought tickets</p>-->
 </ng-container>
 
 <ng-container *ngIf="isPlayTime">
-<p class="row h4 text-center">calledBalls</p>
-<swiper [direction]="'horizontal'" [slidesPerView]="9">
-  <ng-template swiperSlide *ngFor="let balls of calledBalls">
-    <div class="number">
-      {{balls}}
-    </div>
-  </ng-template>
-</swiper>
-
-<mat-card>
-  <mat-card-title class="text-center">
-    Win Board
-  </mat-card-title>
-  <mat-card-content class="board">
-    <div *ngFor="let row of ticket" class="row">
-      <div *ngFor="let number of row; let i = index; trackBy: trackByNumber" class="number" [ngClass]="{'warn': ballIsCalled(number)}">
-        {{number}}
+  <p class="row h4 text-center">calledBalls</p>
+  <swiper [direction]="'horizontal'" [slidesPerView]="9">
+    <ng-template swiperSlide *ngFor="let balls of calledBalls">
+      <div class="number">
+        {{balls}}
       </div>
-    </div>
-  </mat-card-content>
-</mat-card>
+    </ng-template>
+  </swiper>
 
-<swiper [direction]="'horizontal'" [slidesPerView]="5">
-  <ng-template swiperSlide *ngFor="let board of boards">
-    <mat-card>
-      <mat-card-header>
-        {{board.id}}
-      </mat-card-header>
-    </mat-card>
-  </ng-template>
-</swiper>
+  <mat-card>
+    <mat-card-title class="text-center">
+      Board 1
+    </mat-card-title>
+    <mat-card-content class="board">
+      <div *ngFor="let row of ticket" class="row">
+        <div *ngFor="let number of row; let i = index; trackBy: trackByNumber" class="number"
+             [ngClass]="{'warn': ballIsCalled(number)}">
+          {{number}}
+        </div>
+      </div>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card>
+    <mat-card-title class="text-center">
+      Board 2
+    </mat-card-title>
+    <mat-card-content class="board">
+      <div *ngFor="let row of ticket" class="row">
+        <div *ngFor="let number of row; let i = index; trackBy: trackByNumber" class="number"
+             [ngClass]="{'warn': ballIsCalled(number)}">
+          {{number}}
+        </div>
+      </div>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card>
+    <mat-card-title class="text-center">
+      Board 3
+    </mat-card-title>
+    <mat-card-content class="board">
+      <div *ngFor="let row of ticket" class="row">
+        <div *ngFor="let number of row; let i = index; trackBy: trackByNumber" class="number"
+             [ngClass]="{'warn': ballIsCalled(number)}">
+          {{number}}
+        </div>
+      </div>
+    </mat-card-content>
+  </mat-card>
+
+<!--  <mat-card>-->
+<!--    <mat-card-title class="text-center">-->
+<!--      Board 4-->
+<!--    </mat-card-title>-->
+<!--    <mat-card-content class="board">-->
+<!--      <div *ngFor="let row of ticket" class="row">-->
+<!--        <div *ngFor="let number of row; let i = index; trackBy: trackByNumber" class="number"-->
+<!--             [ngClass]="{'warn': ballIsCalled(number)}">-->
+<!--          {{number}}-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </mat-card-content>-->
+<!--  </mat-card>-->
+
+<!--  <mat-card>-->
+<!--    <mat-card-title class="text-center">-->
+<!--      Board 5-->
+<!--    </mat-card-title>-->
+<!--    <mat-card-content class="board">-->
+<!--      <div *ngFor="let row of ticket" class="row">-->
+<!--        <div *ngFor="let number of row; let i = index; trackBy: trackByNumber" class="number"-->
+<!--             [ngClass]="{'warn': ballIsCalled(number)}">-->
+<!--          {{number}}-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </mat-card-content>-->
+<!--  </mat-card>-->
+
+<!--  <swiper [direction]="'horizontal'" [slidesPerView]="5">-->
+<!--    <ng-template swiperSlide *ngFor="let board of boards">-->
+<!--      <mat-card>-->
+<!--        <mat-card-header>-->
+<!--          {{board.id}}-->
+<!--        </mat-card-header>-->
+<!--      </mat-card>-->
+<!--    </ng-template>-->
+<!--  </swiper>-->
 </ng-container>
 
 <ng-container *ngIf="isWonTime">
