--- a/src/app/components/room/room.component.scss
+++ b/src/app/components/room/room.component.scss
@@ -1,5 +1,18 @@
-.swiper {
-  width: 90vw;
+.swiper.boards {
+  width: 65vw;
+  margin-inline: auto;
+}
+
+.swiper.calls {
+  width: 100%;
+}
+
+.calls-wrapper {
+  width: 80vw;
+  margin-inline: auto;
+  border: 2px solid rgba(123, 31, 162, 0.75);
+  border-radius: 1rem;
+  padding: 0.5rem;
 }
 
 .board {
@@ -11,12 +24,43 @@
   display: grid;
   place-items: center;
   border-radius: 50%;
-  width: 2rem;
-  height: 2rem;
+  width: 1.5rem;
+  height: 1.5rem;
   background-color: rgba(123, 31, 162, 0.75);
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
 
 .number.warn {
   background-color: rgba(244, 67, 54, 0.75);
+}
+
+.empty-numbers {
+  height: 1.5rem;
+}
+
+.called-balls-title {
+  margin-top: 1rem;
+}
+
+.win-popup {
+  display: grid;
+  place-content: center;
+  position: absolute;
+  inset: 100px 0 0 0 ;
+  z-index: 1;
+  background-color: rgba(48,48,48, 0.2);
+}
+
+.popup-content {
+  width: 275px;
+  height: max-content;
+  border-radius: 1.5rem;
+  display: grid;
+  grid-gap: 1rem;
+  place-content: center;
+  padding: 1.5rem;
+}
+
+.mt1 {
+  margin-top: 1rem;
 }
