--- a/src/app/components/room/room.component.scss
+++ b/src/app/components/room/room.component.scss
@@ -42,23 +42,8 @@
   margin-top: 1rem;
 }
 
-.win-popup {
-  display: grid;
-  place-content: center;
-  position: absolute;
+.popup-wrapper {
   inset: 100px 0 0 0 ;
-  z-index: 1;
-  background-color: rgba(48,48,48, 0.2);
-}
-
-.popup-content {
-  width: 275px;
-  height: max-content;
-  border-radius: 1.5rem;
-  display: grid;
-  grid-gap: 1rem;
-  place-content: center;
-  padding: 1.5rem;
 }
 
 .mt1 {
