--- a/src/app/components/wallet/wallet.component.css
+++ b/src/app/components/wallet/wallet.component.css
@@ -1,12 +1,30 @@
 :host {
-  grid-gap: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0 2rem 2rem;
+  box-sizing: border-box;
 }
 
 .button-content {
   display: flex;
-  align-items: baseline;
+  align-items: center;
+  flex-direction: column;
 }
 
 .fa-ethereum {
   margin-left: 0.25rem;
+}
+
+.main-buttons-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
+}
+
+.footer {
+  display: grid;
+  grid-gap: 1rem;
 }
