--- a/src/app/components/wallet/wallet.component.html
+++ b/src/app/components/wallet/wallet.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="promocode; else elseZone">
+<ng-container *ngIf="promocode; else mainZone">
   <div class="popup-wrapper">
     <div class="popup-content mat-app-background">
       <mat-form-field class="example-form-field" appearance="fill">
@@ -8,61 +8,38 @@
           <mat-icon>close</mat-icon>
         </button>
       </mat-form-field>
-        <button mat-raised-button color="primary" class="h6" (click)="sendPromocode()">Send Promocode</button>
-        <button mat-raised-button color="primary" class="h6" (click)="closePromocode()">Close</button>
+      <button mat-raised-button color="primary" class="h6" (click)="sendPromocode()">Send Promocode</button>
+      <button mat-raised-button color="primary" class="h6" (click)="closePromocode()">Close</button>
     </div>
   </div>
 </ng-container>
 
-<ng-template #elseZone>
-
-
+<ng-template #mainZone>
   <p>Ticket Price is: {{ticketPrice}}<i class='fab fa-ethereum' *ngIf="ticketPriceAsBigInt"></i></p>
 
-  <button mat-raised-button color="primary" class="h6"
-          [disabled]="depositIsDisable(balance$ | async, ticketPriceAsBigInt)"
-          (click)="usePromocode()">
-    I have a Promocode
-  </button>
-
-
-  <button mat-raised-button color="primary" class="h6"
-          [disabled]="depositIsDisable(balance$ | async, ticketPriceAsBigInt)"
-          (click)="makeDeposit(getDepositValue(1))">
+  <div class="main-buttons-container">
+    <button *ngFor="let button of depositButtons" mat-raised-button class="h6 deposit-button"
+            [disabled]="depositIsDisable(balance$ | async, ticketPriceAsBigInt)"
+            (click)="makeDeposit(getDepositValue(ticketPrice, button))">
   <span class="button-content">
-    {{getDepositPrice(1)}}
-    <i class='fab fa-ethereum' *ngIf="ticketPriceAsBigInt"></i>
+    <img alt="loader" src="assets/ether_coin_loader.gif">
+    <span *ngIf="ticketPriceAsBigInt">{{getDepositPrice(ticketPrice, button)}}
+      <i class='fab fa-ethereum'></i>
+    </span>
   </span>
-  </button>
+    </button>
+  </div>
 
-  <button mat-raised-button color="primary" class="h6"
-          [disabled]="depositIsDisable(balance$ | async, ticketPriceAsBigInt)"
-          (click)="makeDeposit(getDepositValue(2))">
-  <span class="button-content">
-    {{getDepositPrice(2)}}
-    <i class='fab fa-ethereum' *ngIf="ticketPriceAsBigInt"></i>
-  </span>
-  </button>
+  <div class="footer">
+    <button mat-raised-button color="primary" class="h6"
+            [disabled]="depositIsDisable(balance$ | async, ticketPriceAsBigInt)"
+            (click)="usePromocode()">
+      I have a Promocode
+    </button>
 
-  <button mat-raised-button color="primary" class="h6"
-          [disabled]="depositIsDisable(balance$ | async, ticketPriceAsBigInt)"
-          (click)="makeDeposit(getDepositValue(3))">
-  <span class="button-content">
-    {{getDepositPrice(3)}}
-    <i class='fab fa-ethereum' *ngIf="ticketPriceAsBigInt"></i>
-  </span>
-  </button>
-
-  <button mat-raised-button color="primary" class="h6"
-          [disabled]="depositIsDisable(balance$ | async, ticketPriceAsBigInt)"
-          (click)="makeDeposit(getDepositValue(4))">
-  <span class="button-content">
-    {{getDepositPrice(4)}}
-    <i class='fab fa-ethereum' *ngIf="ticketPriceAsBigInt"></i>
-  </span>
-  </button>
-
-  <button mat-raised-button color="primary" class="h6"
-          (click)="withdrawMoney()">Withdraw money
-  </button>
+    <button mat-raised-button color="primary" class="h6"
+            [disabled]="balanceIsNegative(balance$ | async)"
+            (click)="withdrawMoney()">Withdraw money
+    </button>
+  </div>
 </ng-template>
