--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,1 +1,2 @@
+<!--<img class="game-loader" src="assets/giphy-second.gif">-->
 <button mat-raised-button color="primary" class="h5" [routerLink]="['', 'room']">Lets have a fun</button>
