--- a/src/app/components/room/room.component.scss
+++ b/src/app/components/room/room.component.scss
@@ -59,3 +59,11 @@
   place-content: center;
   grid-gap: 1rem;
 }
+
+:host {
+  /*background-image: url("~src/assets/giphy-second.gif");*/
+  background-image: url("~src/assets/giphy-blue.gif");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
