--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,29 @@
 <ng-template #loader>
 
   <div class="main-loader" (click)="initClick()">
-    <img alt="loader" src="assets/giphy.gif">
+    <img alt="loader" src="assets/giphy-blue.gif">
+    <div class="h6 start" (click)="initClick()" *ngIf="!initialized">Click to continue</div>
   </div>
 
-    <div class="popup-wrapper" *ngIf="initialized && !isConnected">
-      <div class="popup-content mat-app-background" [ngSwitch]="web3Status">
-        <ng-container *ngSwitchCase="web3StatusType.Disconnected">
-          <p>You`ve been disconnected from metamask. Please connect to metamask</p>
-          <button mat-raised-button color="primary" class="h6" (click)="signIn()">Send request</button>
-        </ng-container>
-        <p *ngSwitchCase="web3StatusType.MetamaskIsNotDefined">Metamask was not found. Please install Metamask
-          extension</p>
-        <ng-container *ngSwitchCase="web3StatusType.MetamaskDefined">
-          <p>Please connect to Metamask</p>
-          <!--        <button mat-raised-button color="primary" class="h6" (click)="signIn()">Send request</button>-->
-        </ng-container>
-        <ng-container *ngSwitchCase="web3StatusType.AccountRejected">
-          <p>You`ve rejected metamask connection. Please connect to
-            metamask</p>
-          <button mat-raised-button color="primary" class="h6" (click)="signIn()">Send request</button>
-        </ng-container>
-      </div>
+  <div class="popup-wrapper" *ngIf="initialized && !isConnected">
+    <div class="popup-content mat-app-background" [ngSwitch]="web3Status">
+      <ng-container *ngSwitchCase="web3StatusType.Disconnected">
+        <p>You`ve been disconnected from metamask. Please connect to metamask</p>
+        <button mat-raised-button color="primary" class="h6" (click)="signIn()">Send request</button>
+      </ng-container>
+      <p *ngSwitchCase="web3StatusType.MetamaskIsNotDefined">Metamask was not found. Please install Metamask
+        extension</p>
+      <ng-container *ngSwitchCase="web3StatusType.MetamaskDefined">
+        <p>Please connect to Metamask</p>
+        <!--        <button mat-raised-button color="primary" class="h6" (click)="signIn()">Send request</button>-->
+      </ng-container>
+      <ng-container *ngSwitchCase="web3StatusType.AccountRejected">
+        <p>You`ve rejected metamask connection. Please connect to
+          metamask</p>
+        <button mat-raised-button color="primary" class="h6" (click)="signIn()">Send request</button>
+      </ng-container>
     </div>
+  </div>
 </ng-template>
 
 <ng-container *ngIf="initialized && isConnected; else loader">
@@ -33,18 +34,20 @@
       <span *ngIf="balanceIsUpdated$ | async; else balanceLoader">{{currentBingoBalance$ | async}} <i
         class='fab fa-ethereum' style='font-size:24px'></i></span>
 
-      <ng-template #balanceLoader><img alt="balanceLoader" src="assets/Ethereum_logo_revolving.gif"
-                                       class="balance-loader"></ng-template>
+      <ng-template #balanceLoader>
+        <div class="balance-loader">updating...<img class="balance-loader-icon" alt="balanceLoader" src="assets/Ethereum_logo_revolving.gif">
+        </div>
+      </ng-template>
       <!--    <button mat-mini-fab color="primary" [routerLink]="'sing-out'">-->
       <!--      <mat-icon>account_circle</mat-icon>-->
       <!--    </button>-->
     </mat-toolbar-row>
     <mat-toolbar-row class="row">
       <button mat-raised-button color="primary" class="h5" [routerLink]="'main-page'" routerLinkActive
-              #main="routerLinkActive" [disabled]="main.isActive">Main
+              #main="routerLinkActive" [disabled]="main.isActive"><mat-icon class="arrow-back">arrow_back_ios</mat-icon>
       </button>
       <button mat-raised-button color="primary" class="h5" [routerLink]="'wallet'" routerLinkActive
-              #wallet="routerLinkActive" [disabled]="wallet.isActive">Wallet
+              #wallet="routerLinkActive" [disabled]="wallet.isActive"><mat-icon>account_balance_wallet</mat-icon>
       </button>
 
     </mat-toolbar-row>
