--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,8 +10,23 @@
 .main-loader {
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   img {
-    width: 100%;
     height: 100%;
   }
+}
+
+.arrow-back {
+  margin-left: 0.5rem;
+}
+
+.start {
+  position: absolute;
+  inset: 50% 0;
+  z-index: 1;
+  opacity: 0.7;
+  color: white;
+  text-align: center;
 }
