--- a/src/app/components/room/room.component.scss
+++ b/src/app/components/room/room.component.scss
@@ -67,3 +67,10 @@
   background-repeat: no-repeat;
   background-position: center;
 }
+
+.congratulation-icon {
+  height: 20rem;
+  display: grid;
+  place-content: center;
+  overflow: hidden;
+}
