--- a/src/app/components/room/room.component.html
+++ b/src/app/components/room/room.component.html
@@ -76,7 +76,7 @@
     </swiper>
   </ng-container>
 
-  <!--  <ng-container *ngIf="isWonTime">-->
+    <ng-container *ngIf="isWonTime">
 
   <div class="popup-wrapper">
     <div class="popup-content mat-app-background">
@@ -94,5 +94,5 @@
       </ng-template>
     </div>
   </div>
-  <!--  </ng-container>-->
+    </ng-container>
 </ng-container>
